--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Big Shoulders Display', cursive;
 }
 
 body {
-    min-height: 140vh;
     overflow-x: hidden;
-    background: #161415;
     user-select: none;
 }
 
@@ -62,8 +60,7 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: rgba(0, 0, 0, 0.822);
-    font-family: "Colonna MT", sans-serif;
+    background: rgba(0, 0, 0, 0.63);
     height: 10vh;
 }
 
@@ -159,173 +156,55 @@ nav {
     transform: rotate(45deg) translate(-5px, -7px);
 }
 
-/*START*/
+/*BANNEr*/
 
 section {
-    position: relative;
-    width: auto;
-    height: 90vh;
-    background: url('../img/Neblina.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    clip-path: circle(150vh at 50% -80vh);
+    height: auto;
+    overflow: hidden;
+    background: red;
 }
 
-section .content {
-    max-width: 1000px;
-    padding-bottom: 173px;
-    text-align: center;
-}
-
-section .content h2 {
-    font-size: 5em;
-    color: black;
-    font-weight: 700;
-}
-
-@media (max-width:527px) {
-
-    section .content h2 {
-        font-size: 3em;
-    }
-}
-
-/*HISTORY*/
-
-.history {
+#background {
     width: 100%;
-    height: 500px;
-    margin-top: 40px;
+    position: fixed;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
 }
 
-.history .image {
-    width: 350px;
-    height: 300px;
-    background: rgba(0, 0, 0, 0.438);
-    border-radius: 15%;
-}
-
-.history .image img {
-    width: 100%;
-    height: 100%;
-}
-
-.history .text {
-    width: 650px;
-    height: 430px;
+#content {
+    position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    background: rgba(0, 0, 0, 0.438);
-}
-
-.history .text h1 {
-    display: flex;
     justify-content: center;
     align-items: center;
-    color: rgb(82, 82, 82);
 }
 
-.history .text p {
-    width: 500px;
-    height: 350px;
-    color: rgb(82, 82, 82);
-}
-
-/*Modal*/
-
-.modal-container {
+#content .title {
     width: 100vw;
     height: 100vh;
-    background: #00000080;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    z-index: 1000;
-    display: none;
-    justify-content: center;
-    align-items: center;
-}
-
-@keyframes modal {
-    from {
-        opacity: 0;
-        transform: translate3d(0, -60px, 0);
-    }
-
-    to {
-        opacity: 1;
-        transform: translate3d(0, 0, 0);
-    }
-}
-
-.modal-container.open-modal {
-    display: flex;
-}
-
-.modal-container.open-modal .modal-frame {
-    animation: modal .3s;
-}
-
-.modal-frame {
-    background: #000000;
-    width: 50%;
-    min-width: 300px;
-    position: relative;
-    padding: 40px;
-    border: 10px solid rgb(82, 82, 82);
-    box-shadow: 0 0 0 10px black;
-}
-
-.modal-frame h3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgb(82, 82, 82);
-}
-
-.modal-frame form {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    color: #fff;
+    text-shadow: #000 2px 2px 2px;
 }
 
-.modal-frame form input {
-    width: 300px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+#content .about {
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    justify-content: space-around;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.527);
 }
 
-.modal-frame form .button {
-    width: 200px;
-    height: 50px;
-    background: #3F3F3F;
-    color: white;
-    border-radius: 5px;
-}
-
-.modal-frame form .button:hover {
-    background: #242424;
-}
-
-.clouse {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: -30px;
-    right: -30px;
-    border-radius: 50%;
-    border: 4px solid black;
-    background: rgb(82, 82, 82);
+#content .about .text {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     color: black;
-    font-family: "PT Mono", monospace;
-    cursor: pointer;
+    overflow: hidden;
 }
