--- a/css/styles.css
+++ b/css/styles.css
@@ -178,8 +178,7 @@ section {
     align-items: center;
 }
 
-#content .title,
-#content .title2 {
+#content .title {
     width: 100vw;
     height: 100vh;
     display: flex;
