--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
 body {
     overflow-x: hidden;
     user-select: none;
+    background: rgba(255, 0, 0, 0.39);
 }
 
 /* Scroll Body */
@@ -178,8 +179,8 @@ section {
     align-items: center;
 }
 
-#content .title,
-#content .title2 {
+#content .home,
+#content .recovery {
     width: 100vw;
     height: 100vh;
     flex-direction: column;
@@ -189,11 +190,11 @@ section {
     text-shadow: #000 2px 2px 2px;
 }
 
-#content .title {
+#content .home {
     display: none;
 }
 
-#content .title2 {
+#content .recovery {
     display: none;
 }
 
@@ -216,3 +217,6 @@ section {
     color: black;
     overflow: hidden;
 }
+
+/* Responsive */
+@media (max-width: 1364) {}
