--- a/css/styles.css
+++ b/css/styles.css
@@ -183,12 +183,19 @@ section {
 #content .recoveryP {
     width: 100vw;
     height: 100vh;
-    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: #fff;
     text-shadow: #000 2px 2px 2px;
+}
+
+#content .home {
+    display: none;
+}
+
+#content .recovery {
+    display: none;
 }
 
 #content .about {
