--- a/css/styles.css
+++ b/css/styles.css
@@ -179,8 +179,8 @@ section {
     align-items: center;
 }
 
-#content .home,
-#content .recoveryP {
+#content .title,
+#content .title2 {
     width: 100vw;
     height: 100vh;
     flex-direction: column;
@@ -190,11 +190,11 @@ section {
     text-shadow: #000 2px 2px 2px;
 }
 
-#content .home {
+#content .title {
     display: none;
 }
 
-#content .recoveryP {
+#content .title2 {
     display: none;
 }
 
@@ -217,6 +217,3 @@ section {
     color: black;
     overflow: hidden;
 }
-
-/* Responsive */
-/* @media (max-width: 1364) {} */
