--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@ section {
     background: rgba(255, 255, 255, 0.527);
 }
 
-#home .recoverPassword form {
+#home .recoverPassword .form {
     width: 60%;
     min-width: 300px;
     padding: 40px;
