--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ section {
     width: 60%;
     min-width: 300px;
     padding: 40px;
-    background: rebeccapurple;
+    background: rebeccapurples;
 }
 
 #home .recoverPassword {
