--- a/css/styles.css
+++ b/css/styles.css
@@ -227,16 +227,17 @@ section {
 }
 
 #home .recoverPassword .form {
-
     width: 60%;
     min-width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px 0;
 }
 
 #home .recoverPassword .form form {
+    width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -245,10 +246,15 @@ section {
 
 #home .recoverPassword .form h3 {
     margin-top: 10px;
+    color: #000000;
 }
 
 #home .recoverPassword .form form .email {
+    width: 150px;
     margin: 10px 5px;
+    padding-left: 4px;
+    border: 1px solid #888888;
+    border-radius: 5px;
 }
 
 #home .recoverPassword .form form .button {
