--- a/css/styles.css
+++ b/css/styles.css
@@ -272,11 +272,12 @@ textarea {
 }
 
 #button {
-    background: rgba(0, 0, 0, 0.527);
+    border: none;
+    background: rgb(0, 0, 0);
     color: white;
 }
 
 #button:hover {
-    background: rgba(255, 255, 255, 0.527);
+    background: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
 }
