modifying the layout of validatingForm

--- a/css/styles.css
+++ b/css/styles.css
@@ -242,7 +242,7 @@ section {
 }
 
 label,
-#Support,
+#subject,
 textarea,
 #button {
     width: 100%;
@@ -251,7 +251,7 @@ textarea,
     font-weight: 700;
 }
 
-#Support,
+#subject,
 textarea {
     margin-bottom: 1rem;
     color: #fff;
@@ -269,6 +269,10 @@ label {
 textarea {
     min-height: 10rem;
     resize: vertical;
+}
+
+.message {
+    display: none;
 }
 
 #button {
