testing the form

--- a/css/styles.css
+++ b/css/styles.css
@@ -275,8 +275,15 @@ textarea {
     display: none;
 }
 
+.submit {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #button {
-    border: none;
+    text-decoration: none;
     border-radius: 5px;
     background: rgb(0, 0, 0);
     color: white;
