--- a/css/styles.css
+++ b/css/styles.css
@@ -283,6 +283,7 @@ textarea {
 }
 
 #button {
+    text-align: center;
     text-decoration: none;
     border-radius: 5px;
     background: rgb(0, 0, 0);
