--- a/css/styles.css
+++ b/css/styles.css
@@ -275,22 +275,6 @@ textarea {
     display: none;
 }
 
-.submit {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#button {
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    background: rgb(0, 0, 0);
-    color: white;
-}
-
-#button:hover {
-    background: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+.alert {
+    display: none;
 }
